// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option go_package = "katamaran/pkg/msg";

package msg;

// Interface exported by the server.
service Katamaran {
  rpc AppendEntry(AppendEntriesReq) returns (AppendEntriesRsp) {}
  rpc RequestAllVotes(RequestVotesReq) returns (RequestVotesRsp) {}
  rpc AddEntry(AddEntryReq) returns (Empty) {}
}

message Empty {

}

message AddEntryReq {
  bytes value = 1;
}
message RequestVotesRsp {
  bool voteGranted = 1;
}
message AppendEntriesRsp {
  int32 term = 1;
  bool success = 2;
}
message RequestVotesReq {
  int32 term = 1;
  string id = 2;
  int32 lastIndex = 3;
  int32 lastTerm = 4;
}

message AppendEntriesReq {
  int32 term = 1;
  string id = 2;
  int32 lastIndex = 3;
  int32 lastTerm = 4;
  repeated Entry entries = 5;
  int32 commitIndex = 6;
}

message Entry {
    bytes value = 1;
    int32 index = 2;
    int32 term = 3;
}